# LEMUR-CoLo-Copy

./: README.md
CoLo-AT/: Cooperative_Localization_Journal1.py  README.md  dataset_analysis.py  icra2019_demo.py  j1_rw.py  sim_demo.py  tmp_est.txt  tmp_est_1.txt  tmp_est_3.txt  tmp_est_5.txt  tmp_gt.txt  tmp_gt_1.txt  tmp_gt_3.txt  tmp_gt_5.txt
CoLo-AT/data_analysis/: analysis.py  animate_plot.py  data_analyzer.py  realtime_plot.py  results_graphs.py
CoLo-AT/dataset_manager/: data_generator.py  existing_dataset.py~  realworld_dataset_manager.py  simulated_dataset_manager.py  simulated_dataset_manager_w.py  testing_dataset.py
CoLo-AT/localization_algos/: cal_test.py  centralized_ekf.py  ekf_gs_ci2.py  ekf_gs_sci2.py  ekf_ls_bda.py  ekf_ls_ci.py  localization_algo_framework.py
CoLo-AT/requests/: request_response.py
CoLo-AT/robots/: robot_distributive.py  robot_system.py
CoLo-AT/simulation_process/: sim_manager.py  state_recorder.py  test_recorder.py
CoLo-D/: README.md
CoLo-PE/: README.md  aruco_markers_detect.launch  aruco_sensing.sh  cal_1080p.yml  cal_480p.yml  cal_720p.yml  get_sensor_variances.py  meas_transform.py  read_csv.py  robot_full_run.sh  usb_cam_stream_publisher.launch
CoLo-PE/aruco_record/: CMakeLists.txt  package.xml
CoLo-PE/aruco_record/src/: measurement_record.cpp
CoLo-PE/robot_controls/: CMakeLists.txt  controls.py  create2_motion_control.py  odometry_record.py  package.xml  publish.py
